Adjust comment format

--- a/.github/validator/success.mustache
+++ b/.github/validator/success.mustache
@@ -9,7 +9,7 @@ request.
 | Key        | Value      |
 | ---------- | ---------- |
 {{#each issue}}
-| `{{@key}}` | `{{newlines this}}` |
+| `{{@key}}` | {{{newlines this}}} |
 {{/each}}
 
 <!--prettier-ignore-end-->
